<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivCharacterImage"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="96dp"
        android:layout_height="96dp"
        app:civ_border_width="2dp"
        app:civ_border_color="#FF000000"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/tvCharacterName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ellipsize="end"
        android:text="@string/film_character_name"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/ivCharacterImage"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/txtCharacterGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="10dp"
        android:text="@string/gender"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/tvCharacterName"
        app:layout_constraintStart_toEndOf="@+id/ivCharacterImage"/>
    <TextView
        android:id="@+id/tvCharacterGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="5dp"
        android:text="@string/gender"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/tvCharacterName"
        app:layout_constraintStart_toEndOf="@+id/txtCharacterGender" />
    <TextView
        android:id="@+id/txtCharacterBirth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="10dp"
        android:text="@string/Birth"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/tvCharacterGender"
        app:layout_constraintStart_toEndOf="@+id/ivCharacterImage"/>

    <TextView
        android:id="@+id/tvCharacterBirth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="5dp"
        android:text="@string/Birth"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/txtCharacterBirth"
        app:layout_constraintTop_toBottomOf="@+id/tvCharacterGender"/>

</androidx.constraintlayout.widget.ConstraintLayout>